Fixed center alignment of login / start elements

--- a/app/styles/layout.scss
+++ b/app/styles/layout.scss
@@ -102,6 +102,11 @@ body {
   }
 }
 
+.start {
+  display: flex;
+  align-items: center;
+}
+
 // ============================================================================
 // Game
 // ============================================================================
@@ -112,6 +117,8 @@ body {
   right: 0;
   bottom: 0;
   left: 0;
+  display: flex;
+  align-items: center;
 }
 
 .game-background {
